# doodle

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RULES.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EVAL.md  EXTENDING.md  QUALITY_REPORT.md  WHY.md
docs/data/: quality-report-2026-06.json
src/doodle/: cli.py  config.py  fixers.py  formatters.py  models.py  parser.py
src/doodle/eval/: __init__.py  generate.py  promptfoo.py  runner.py  schema.py
src/doodle/rules/: __init__.py  body.py  custom.py  description.py  frontmatter.py  hygiene.py
tests/: test_config.py  test_eval.py  test_fixers.py  test_formatters.py  test_rules.py
tests/fixtures/abs-path/: SKILL.md
tests/fixtures/bad-description/: SKILL.md
tests/fixtures/eval-skill/: SKILL.md  eval.yaml
tests/fixtures/extended-no-tools/: SKILL.md
tests/fixtures/fix-targets/blank-desc/: SKILL.md
tests/fixtures/fix-targets/emoji-body/: SKILL.md
tests/fixtures/good-skill/: SKILL.md
tests/fixtures/has-emoji/: SKILL.md
tests/fixtures/missing-desc/: SKILL.md
tests/fixtures/with-config/: .doodle.toml
tests/fixtures/with-config/skills/acme-skill/: SKILL.md
vscode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
vscode/src/: extension.ts
