[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doodle-lint"
version = "0.4.0"
description = "A linter for Claude SKILL.md files."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "doodle contributors" }]
keywords = ["claude", "skills", "linter", "anthropic", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "PyYAML>=6.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
eval = [
    "anthropic>=0.30.0",
]

[project.scripts]
doodle = "doodle.cli:main"

[project.urls]
Homepage = "https://github.com/krishyaid-coder/doodle"
Issues = "https://github.com/krishyaid-coder/doodle/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/doodle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
